#VERSION 0.7.95#

*  Peak_View_Helpers > added magic method __isset(). 

*  Peak_View > __call() will now in order check if method is a View_Engine method or Helper object name.
                        if nothing is find, it simply silence error or, on DEV_MODE, will trigger E_NOTICE.
                        We can now call a view helper name like method name too:
                        Normal way -> $this->helper()->text->truncate('...')
                        New way -> $this->text()->truncate('...')

*  Peak_View_Render > remove some code in __call(). Now __call() will use Peak_View object for 
                      calling unknow Peak_Render methods like helpers and theme.

*  autoload.php > removed method catch_autoload_err() and _autoload_err().
                  use method Peak_Exception::getDebugTrace() instead

*  Peak_Exception > added method getDebugTrace(), added constants ERR_VIEW_HELPER_NOT_FOUND and ERR_CTRL_HELPER_NOT_FOUND.
                    updated Peak_View_Helpers and Peak_Controller_Helpers accordly to this.

#VERSION 0.7.9#


*  Peak_Application > change to sha1 all md5 in validSession()

*  added class Peak_Controller_Helpers > fixed Peak_Controller helper(). Same changes as Peak_View helper()


*  added class Peak_View_Helpers > fixed Peak_View helper() to use this new helpers objects wrapper.
                                    We use now $this->helper()->myclass->mymethod() instead of
                                    $this->helper('myclass')->mymethod()

*  Peak_View > fixed a second issue with setRenderEngine() when calling unknow rendering engine.

*  Peak_Router > added property $params_assoc. fixed resolveRequest() to added params as associative array.
                 added property $params_assoc to Peak_controller too.

*  Peak_Render > fixed __call() for unknow method to check in Peak_View object if method exits and call it.
                 Removed method helper().
